--- a/style/thuvien.css
+++ b/style/thuvien.css
@@ -55,6 +55,27 @@ body {
     color: black;
     background: white;
 }
+.menu1 {
+    margin: 40px 0px;
+    padding-left: 0px;
+    float: left;
+    display: none;
+}
+.menu1>li>a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    display: block;
+    padding: 8px 15px;
+    font-weight: bold;
+}
+
+.menu1>li:hover a {
+    color: black;
+    background: white;
+}
 
 .search-box {
     position: relative;
